--- a/articles/TOC.yml
+++ b/articles/TOC.yml
@@ -36,6 +36,8 @@
               href: environment/resource-configure-integration-per-legal-entity.md
     - name: Nieuwe functies
       items:
+        - name: Maart 2021 - Project Operations voor scenario's op basis van resources/niet-voorradige artikelen
+          href: whats-new/whats-new-mar-2021-resource-based.md
         - name: Februari 2021 - Project Operations voor scenario's op basis van resources/niet-voorradige artikelen
           href: whats-new/whats-new-feb-2021-resource-based.md
         - name: Januari 2021 - Project Operations voor scenario's op basis van resources/niet-voorradige artikelen
@@ -318,52 +320,52 @@
       items:
         - name: Onkostenoverzicht
           href: expense/expense-overview.md
-        - name: Onkostenbeheerfunctie voor projecten
+        - name: Nieuwe onkostenervaring
           items:
-            - name: Configuratie en installatie
-              items:
-                - name: Beleid instellen
-                  href: expense/set-up-policies.md
-                - name: Werkstromen instellen
-                  href: expense/set-up-workflows.md
-                - name: Delegering beheren
-                  href: expense/manage-delegation.md
-                - name: Parameters voor onkostenbeheer configureren
-                  href: expense/configure-expense-management-parameters.md
-                - name: Creditcardintegratie instellen
-                  href: expense/set-up-credit-card-integration.md
-                - name: Onkostencategorieën instellen
-                  href: expense/set-up-expense-categories.md
-            - name: Werken met persoonlijke onkosten in een onkostennota
-              href: expense/personal-expenses-expense-report.md
-            - name: Onkostennota's maken
-              items:
-                - name: Onkosten verdelen in een onkostennota
-                  href: expense/distributions-expense-report.md
-            - name: Onkostennota's goedkeuren
-              items:
-                - name: Onkostennota's en meerdere fiatteurs
-                  href: expense/expense-reports-multiple-approvers.md
-            - name: Onkostennota's boeken
-              href: expense/posting-expense-reports.md
-            - name: Reiskosten
-              href: expense/travel-requisition.md
-            - name: Voorschot
-              href: expense/cash-advance.md
-            - name: Dagvergoedingen
-              href: expense/per-diems.md
-            - name: Financieel beheer
-              items:
-                - name: Btw-afschrijving
-                  href: expense/vat-recovery.md
-            - name: Nieuwe onkostenervaring
-              items:
-                - name: Opnieuw ontworpen onkostennota's
-                  href: expense/expense-reports-reimagined.md
-                - name: Ontvangstbewijs aan onkosten koppelen met behulp van OCR
-                  href: expense/match-receipt-expense-ocr.md
-            - name: Mobiel onkostenbeheer
-              href: expense/expense-using-mobile.md
+            - name: Opnieuw ontworpen onkostennota's
+              href: expense/expense-reports-reimagined.md
+            - name: Een betalingsbewijs vastleggen via OCR
+              href: expense/match-receipt-expense-ocr.md
+        - name: Configuratie en installatie
+          items:
+            - name: Beleid instellen
+              href: expense/set-up-policies.md
+            - name: Werkstromen instellen
+              href: expense/set-up-workflows.md
+            - name: Delegering beheren
+              href: expense/manage-delegation.md
+            - name: Parameters voor onkostenbeheer configureren
+              href: expense/configure-expense-management-parameters.md
+            - name: Creditcardintegratie instellen
+              href: expense/set-up-credit-card-integration.md
+            - name: Onkostencategorieën instellen
+              href: expense/set-up-expense-categories.md
+        - name: Persoonlijke onkosten
+          href: expense/personal-expenses-expense-report.md
+        - name: Intercompany-onkosten
+          href: prod-exp/intercompany-expense.md
+        - name: Onkostennota's maken
+          items:
+            - name: Onkosten verdelen in een onkostennota
+              href: expense/distributions-expense-report.md
+        - name: Onkostennota's goedkeuren
+          items:
+            - name: Onkostennota's en meerdere fiatteurs
+              href: expense/expense-reports-multiple-approvers.md
+        - name: Onkostennota's boeken
+          href: expense/posting-expense-reports.md
+        - name: Reiskosten
+          href: expense/travel-requisition.md
+        - name: Voorschot
+          href: expense/cash-advance.md
+        - name: Dagvergoedingen
+          href: expense/per-diems.md
+        - name: Mobiele onkosten-app
+          href: expense/expense-using-mobile.md
+        - name: Financieel beheer
+          items:
+            - name: Btw-afschrijving
+              href: expense/vat-recovery.md
     - name: Goedkeuringen
       items:
         - name: Overzicht van goedkeuringen
@@ -456,6 +458,8 @@
           href: environment/security-model.md
     - name: Nieuwe functies
       items:
+        - name: Nieuw in maart 2021 - lite-implementatie
+          href: pro/whats-new/whats-new-mar-2021-lite.md
         - name: Nieuw in februari 2021 - lite-implementatie
           href: pro/whats-new/whats-new-feb-2021-lite.md
         - name: Nieuw in januari 2021 - lite-implementatie
@@ -894,44 +898,52 @@
   items:
     - name: Overzicht van Onkostenbeheer
       href: prod-exp/expense-management.md
-    - name: Opnieuw ontworpen onkostennota's
-      href: prod-exp/ExpenseWorkspaceNew.md
-    - name: Onkostenbeheer plannen
-      href: prod-exp/plan-expense-management.md
-    - name: Parameters onkostenbeheer
-      href: prod-exp/Expense-Management-Parameters.md
-    - name: Mobiel werkgebied voor onkostenbeheer
-      href: prod-exp/expense-management-mobile-workspace.md
-    - name: Werkstromen instellen voor onkostenbeheer
-      href: prod-exp/expense-workflows.md
-    - name: Werkstroom voor onkostenbeheer
-      href: prod-exp/expense-workflow.md
-    - name: Onkostendelegering beheren
-      href: prod-exp/manage-expense-delegation.md
-    - name: Verwerking van onkostenkwitanties
-      href: prod-exp/expense-receipt-processing.md
-    - name: Creditcardtransacties importeren en onderhouden
-      href: prod-exp/import-credit-card.md
-    - name: Onkosten verdelen in een onkostennota
-      href: prod-exp/expense-report-distributions.md
+    - name: Nieuwe onkostenervaring
+      items:
+        - name: Opnieuw ontworpen onkostennota's
+          href: expense/expense-reports-reimagined.md
+        - name: Een betalingsbewijs vastleggen via OCR
+          href: expense/match-receipt-expense-ocr.md
+    - name: Configuratie en installatie
+      items:
+        - name: Beleid instellen
+          href: expense/set-up-policies.md
+        - name: Werkstromen instellen
+          href: expense/set-up-workflows.md
+        - name: Delegering beheren
+          href: expense/manage-delegation.md
+        - name: Parameters voor onkostenbeheer configureren
+          href: expense/configure-expense-management-parameters.md
+        - name: Creditcardintegratie instellen
+          href: expense/set-up-credit-card-integration.md
+        - name: Onkostencategorieën instellen
+          href: expense/set-up-expense-categories.md
+    - name: Persoonlijke onkosten
+      href: expense/personal-expenses-expense-report.md
     - name: Intercompany-onkosten
       href: prod-exp/intercompany-expense.md
-    - name: Onkostenbeleid definiëren
-      href: prod-exp/travel-expense-policies.md
-    - name: Een onkostennota weergeven
-      href: prod-exp/view-expense-report.md
-    - name: Een onkostennota boeken
-      href: prod-exp/post-expense.md
-    - name: Onkostennota's en meerdere fiatteurs
-      href: prod-exp/expense-report-multiple-approvers.md
-    - name: Btw-restitutie in Onkostenbeheer
-      href: prod-exp/VAT-expense-report.md
-    - name: Per diem-regels
-      href: prod-exp/per-diem.md
-    - name: Reisaanvragen
-      href: prod-exp/travel-req.md
-    - name: Persoonlijke onkosten in een onkostennota
-      href: prod-exp/personal-expenses.md
+    - name: Onkostennota's maken
+      items:
+        - name: Onkosten verdelen in een onkostennota
+          href: expense/distributions-expense-report.md
+    - name: Onkostennota's goedkeuren
+      items:
+        - name: Onkostennota's en meerdere fiatteurs
+          href: expense/expense-reports-multiple-approvers.md
+    - name: Onkostennota's boeken
+      href: expense/posting-expense-reports.md
+    - name: Reiskosten
+      href: expense/travel-requisition.md
+    - name: Voorschot
+      href: expense/cash-advance.md
+    - name: Dagvergoedingen
+      href: expense/per-diems.md
+    - name: Mobiele onkosten-app
+      href: expense/expense-using-mobile.md
+    - name: Financieel beheer
+      items:
+        - name: Btw-afschrijving
+          href: expense/vat-recovery.md
 - name: Dynamics 365 Project Service Automation
   items:
     - name: Project Service Automation
@@ -940,10 +952,16 @@
       items:
         - name: Updatereleaseschema voor Project Service 3.x
           href: psa/version-history-ps.md
+        - name: 'Nieuwe of gewijzigde functies in Update versie 29, V3'
+          href: psa/whats-new-ur-29.md
+        - name: 'Nieuwe of gewijzigde functies in Update versie 28.6 Hotfix, V3'
+          href: psa/whats-new-ur-28-6.md
         - name: 'Nieuwe of gewijzigde functies in Update versie 28.5 Hotfix, V3'
           href: psa/whats-new-ur-28-5.md
         - name: 'Nieuwe of gewijzigde functies in Update versie 28, V3'
           href: psa/whats-new-ur-28.md
+        - name: 'Nieuwe of gewijzigde functies in Update versie 27.6 Hotfix, V3'
+          href: psa/whats-new-ur-27-6.md
         - name: 'Nieuwe of gewijzigde functies in Update versie 27.5 Hotfix, V3'
           href: psa/whats-new-ur-27-5.md
         - name: 'Nieuwe of gewijzigde functies in Update versie 27, V3'
